@@ -197,6 +197,13 @@ func (c *Client) SetApmServerTransportState(ctx context.Context, status Status) 
 
 // ComputeGracePeriod https://github.com/elastic/apm/blob/main/specs/agents/transport.md#transport-errors
 func (c *Client) ComputeGracePeriod() time.Duration {
+	// If reconnectionCount is 0, returns a random number in an interval.
+	// The grace period for the first reconnection count was 0 but that
+	// leads to collisions with multiple environments.
+	if c.ReconnectionCount == 0 {
+		gracePeriod := rand.Float64() * 5
+		return time.Duration(gracePeriod * float64(time.Second))
+	}
 	gracePeriodWithoutJitter := math.Pow(math.Min(float64(c.ReconnectionCount), 6), 2)
 	jitter := rand.Float64()/5 - 0.1
 	return time.Duration((gracePeriodWithoutJitter + jitter*gracePeriodWithoutJitter) * float64(time.Second))
